--- a/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
+++ b/sampleMobileOffChat/_c8oProject/mobilePages/Lobby.yaml
@@ -17,71 +17,36 @@ scriptContent:
 segment: Lobby
 title: Title for Lobby
 ↓Header [mobile.components.UIDynamicElement-1517842625969]: 
-  beanData: '{"name":"Header"}'
+  beanData: '{"ionBean":"Header"}'
   tagName: ion-header
   ↓NavBar [mobile.components.UIDynamicElement-1517842626004]: 
-    beanData: |
-      '{
-       "name": "NavBar",
-       "properties": {"IonColor": {
-        "mode": "plain",
-        "value": "primary"
-       }}
-      }'
+    beanData: '{"ionBean":"NavBar","IonColor":"plain:primary"}'
     tagName: ion-navbar
     ↓BarTitle [mobile.components.UIDynamicElement-1517842626044]: 
-      beanData: '{"name":"BarTitle"}'
+      beanData: '{"ionBean":"BarTitle"}'
       tagName: ion-title
       ↓TextFormat [mobile.components.UIDynamicElement-1517842626089]: 
-        beanData: |
-          '{
-           "name": "TextFormat",
-           "properties": {"TextCenter": {
-            "mode": "plain",
-            "value": "text-center"
-           }}
-          }'
+        beanData: '{"ionBean":"TextFormat","TextCenter":"plain:text-center"}'
         tagName: div
         ↓Text [mobile.components.UIText-1517842626131]: 
           textValue: 
             - xmlizable: 
               - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-              - MobileSmartSourceType: |
-                  '{
-                   "mode": "plain",
-                   "value": "Lobby"
-                  }'
+              - MobileSmartSourceType: plain:Lobby
     ↓ButtonSet [mobile.components.UIDynamicElement-1518088441378]: 
-      beanData: |
-        '{
-         "name": "ButtonSet",
-         "properties": {"SetPosition": {
-          "mode": "plain",
-          "value": "right"
-         }}
-        }'
+      beanData: '{"ionBean":"ButtonSet","SetPosition":"plain:right"}'
       tagName: ion-buttons
       ↓Button [mobile.components.UIDynamicElement-1518088441400]: 
-        beanData: |
-          '{
-           "name": "Button",
-           "properties": {"ButtonFormType": {
-            "mode": "plain",
-            "value": false
-           }}
-          }'
+        beanData: '{"ionBean":"Button","ButtonFormType":"plain:false"}'
         tagName: button
         ↓Icon [mobile.components.UIDynamicElement-1518088441421]: 
-          beanData: |
-            '{
-             "name": "Icon",
-             "properties": {"IconName": {
-              "mode": "plain",
-              "value": "more"
-             }}
-            }'
+          beanData: '{"ionBean":"Icon","IconName":"plain:more"}'
           tagName: ion-icon
         ↓Event [mobile.components.UIControlEvent-1518088441443]: 
+          attrValue: 
+            - xmlizable: 
+              - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+              - MobileSmartSourceType: plain:value
           ↓CustomAction [mobile.components.UICustomAction-1518088441460]: 
             actionValue: 
               - xmlizable: 
@@ -125,57 +90,34 @@ title: Title for Lobby
             ↓CallFullSync [mobile.components.UIDynamicAction-1518088441506]: 
               beanData: |
                 '{
-                 "name": "CallFullSyncAction",
-                 "properties": {
-                  "requestable": {
-                   "mode": "plain",
-                   "value": "sampleMobileOffChat.offchat_fullsync"
-                  },
-                  "verb": {
-                   "mode": "plain",
-                   "value": "sync"
-                  }
-                 }
+                 "ionBean": "CallFullSyncAction",
+                 "requestable": "plain:sampleMobileOffChat.offchat_fullsync",
+                 "verb": "plain:sync"
                 }'
               ↓cancel [mobile.components.UIControlVariable-1518089024003]: 
                 varValue: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                    - MobileSmartSourceType: |
-                        '{
-                         "mode": "script",
-                         "value": "true"
-                        }'
+                    - MobileSmartSourceType: script:true
               ↓RootPage [mobile.components.UIDynamicAction-1518089070701]: 
-                beanData: |
-                  '{
-                   "name": "RootPageAction",
-                   "properties": {"page": {
-                    "mode": "plain",
-                    "value": "sampleMobileOffChat.OffChat.OffChat.Login"
-                   }}
-                  }'
+                beanData: '{"ionBean":"RootPageAction","page":"plain:sampleMobileOffChat.OffChat.OffChat.Login"}'
 ↓Content [mobile.components.UIDynamicElement-1517842626167]: 
-  beanData: '{"name":"Content"}'
+  beanData: '{"ionBean":"Content"}'
   tagName: ion-content
   ↓CardContainer [mobile.components.UIDynamicElement-1517849109999]: 
-    beanData: '{"name":"Card"}'
+    beanData: '{"ionBean":"Card"}'
     tagName: ion-card
     ↓CardContent [mobile.components.UIDynamicElement-1517849115628]: 
-      beanData: '{"name":"CardContent"}'
+      beanData: '{"ionBean":"CardContent"}'
       tagName: ion-card-content
       ↓ListContainer [mobile.components.UIDynamicElement-1517842865406]: 
-        beanData: '{"name":"List"}'
+        beanData: '{"ionBean":"List"}'
         tagName: ion-list
         ↓Directive [mobile.components.UIControlDirective-1517843119306]: 
           directiveSource: 
             - xmlizable: 
               - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-              - MobileSmartSourceType: |
-                  '{
-                   "mode": "source",
-                   "value": "{\"filter\":\"Database\",\"project\":\"sampleMobileOffChat\",\"input\":\"listen([''fs:\\\/\\\/offchat_fullsync.get''])?.users\"}"
-                  }'
+              - MobileSmartSourceType: source:{"filter":"Database","project":"sampleMobileOffChat","input":"listen(['fs:\/\/offchat_fullsync.get'])?.users"}
           ↓Directive [mobile.components.UIControlDirective-1517844943304]: 
             comment: item1517843119306 != this.router.sharedObject["username"]
             directiveExpression: item1517843119306 != this.window.sessionStorage.username
@@ -183,57 +125,34 @@ title: Title for Lobby
             directiveSource: 
               - xmlizable: 
                 - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                - MobileSmartSourceType: |
-                    '{
-                     "mode": "source",
-                     "value": "{}"
-                    }'
+                - MobileSmartSourceType: source:{}
             ↓Button [mobile.components.UIDynamicElement-1517849203750]: 
               beanData: |
                 '{
-                 "name": "Button",
-                 "properties": {
-                  "ButtonFormType": {
-                   "mode": "plain",
-                   "value": false
-                  },
-                  "ButtonType": {
-                   "mode": "plain",
-                   "value": "ion-item"
-                  },
-                  "IonColor": {
-                   "mode": "plain",
-                   "value": "light"
-                  }
-                 }
+                 "ionBean": "Button",
+                 "ButtonFormType": "plain:false",
+                 "ButtonType": "plain:ion-item",
+                 "IonColor": "plain:light"
                 }'
               tagName: button
               ↓Text [mobile.components.UIText-1517843618972]: 
                 textValue: 
                   - xmlizable: 
                     - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                    - MobileSmartSourceType: |
-                        '{
-                         "mode": "source",
-                         "value": "{\"filter\":\"Iteration\",\"project\":\"sampleMobileOffChat\",\"input\":\"item1517843119306\"}"
-                        }'
+                    - MobileSmartSourceType: source:{"filter":"Iteration","project":"sampleMobileOffChat","input":"item1517843119306"}
               ↓Icon [mobile.components.UIDynamicElement-1517848669716]: 
                 beanData: |
                   '{
-                   "name": "Icon",
-                   "properties": {
-                    "IconName": {
-                     "mode": "plain",
-                     "value": "mail-open"
-                    },
-                    "ItemPosition": {
-                     "mode": "plain",
-                     "value": "item-right"
-                    }
-                   }
+                   "ionBean": "Icon",
+                   "IconName": "plain:mail-open",
+                   "ItemPosition": "plain:item-right"
                   }'
                 tagName: ion-icon
               ↓Event [mobile.components.UIControlEvent-1517848722634]: 
+                attrValue: 
+                  - xmlizable: 
+                    - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+                    - MobileSmartSourceType: plain:value
                 ↓CustomAction [mobile.components.UICustomAction-1517918128977]: 
                   actionValue: 
                     - xmlizable: 
@@ -245,39 +164,20 @@ title: Title for Lobby
                   ↓PushPage [mobile.components.UIDynamicAction-1517849454387]: 
                     beanData: |
                       '{
-                       "name": "PushPageAction",
-                       "properties": {
-                        "page": {
-                         "mode": "plain",
-                         "value": "sampleMobileOffChat.OffChat.OffChat.Chat"
-                        },
-                        "data": {
-                         "mode": "plain",
-                         "value": ""
-                        }
-                       }
+                       "ionBean": "PushPageAction",
+                       "page": "plain:sampleMobileOffChat.OffChat.OffChat.Chat",
+                       "data": "plain:"
                       }'
                   ↓dest [mobile.components.UIControlVariable-1517921410365]: 
                     varValue: 
                       - xmlizable: 
                         - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-                        - MobileSmartSourceType: |
-                            '{
-                             "mode": "source",
-                             "value": "{\"filter\":\"Iteration\",\"project\":\"sampleMobileOffChat\",\"input\":\"item1517843119306\"}"
-                            }'
+                        - MobileSmartSourceType: source:{"filter":"Iteration","project":"sampleMobileOffChat","input":"item1517843119306"}
 ↓Footer [mobile.components.UIDynamicElement-1517842626237]: 
-  beanData: '{"name":"Footer"}'
+  beanData: '{"ionBean":"Footer"}'
   tagName: ion-footer
   ↓ToolBar [mobile.components.UIDynamicElement-1517842626276]: 
-    beanData: |
-      '{
-       "name": "ToolBar",
-       "properties": {"IonColor": {
-        "mode": "plain",
-        "value": "primary"
-       }}
-      }'
+    beanData: '{"ionBean":"ToolBar","IonColor":"plain:primary"}'
     tagName: ion-toolbar
     ↓Style [mobile.components.UIStyle-1517842626309]: 
       styleContent: 
@@ -291,61 +191,37 @@ title: Title for Lobby
     ↓Directive [mobile.components.UIControlDirective-1518096866377]: 
       directiveExpression: this.window.sessionStorage.offline == 'true'
       directiveName: If
+      directiveSource: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: plain:
       ↓Icon [mobile.components.UIDynamicElement-1518096912075]: 
-        beanData: |
-          '{
-           "name": "Icon",
-           "properties": {"IconName": {
-            "mode": "plain",
-            "value": "plane"
-           }}
-          }'
+        beanData: '{"ionBean":"Icon","IconName":"plain:plane"}'
         tagName: ion-icon
       ↓Text [mobile.components.UIText-1518096918824]: 
         textValue: 
           - xmlizable: 
             - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-            - MobileSmartSourceType: |
-                '{
-                 "mode": "plain",
-                 "value": "Offline Mode"
-                }'
+            - MobileSmartSourceType: plain:Offline Mode
       ↓Icon1 [mobile.components.UIDynamicElement-1518097036523]: 
-        beanData: |
-          '{
-           "name": "Icon",
-           "properties": {"IconName": {
-            "mode": "plain",
-            "value": "plane"
-           }}
-          }'
+        beanData: '{"ionBean":"Icon","IconName":"plain:plane"}'
         tagName: ion-icon
     ↓Text [mobile.components.UIText-1517842626341]: 
       textValue: 
         - xmlizable: 
           - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
-          - MobileSmartSourceType: |
-              '{
-               "mode": "plain",
-               "value": "© Convertigo"
-              }'
+          - MobileSmartSourceType: plain:© Convertigo
+    ↓Text99 [mobile.components.UIText-1537883945591]: 
+      textValue: 
+        - xmlizable: 
+          - ↑classname: com.twinsoft.convertigo.beans.mobile.components.MobileSmartSourceType
+          - MobileSmartSourceType: script:false
 ↓PageEvent [mobile.components.UIPageEvent-1517842890865]: 
   ↓GetData [mobile.components.UIDynamicAction-1519206701361]: 
     beanData: |
       '{
-       "name": "FullSyncGetAction",
-       "properties": {
-        "requestable": {
-         "mode": "plain",
-         "value": "sampleMobileOffChat.offchat_fullsync"
-        },
-        "_id": {
-         "mode": "plain",
-         "value": "userList"
-        },
-        "__live": {
-         "mode": "plain",
-         "value": "lobby"
-        }
-       }
+       "ionBean": "FullSyncGetAction",
+       "requestable": "plain:sampleMobileOffChat.offchat_fullsync",
+       "_id": "plain:userList",
+       "__live": "plain:lobby"
       }'
